Add the structure for the styles

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,1 +1,9 @@
+// Main Styles
+// -----------
+
 @import '../../node_modules/normalize-styl/normalize'
+@import 'variables'
+@import 'mixins'
+
+@import 'elements'
+@import 'objects'
