--- a/src/templates/section.html
+++ b/src/templates/section.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" href="../../../css/main.css">
 </head>
 <body>
+  <div class="header">
+    Header
+  </div>
   {{{contents}}}
 </body>
 </html>
