Improve the styles on the pages

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,7 +1,8 @@
 // Main Styles
 // -----------
 
-@import '../../node_modules/normalize-styl/normalize'
+@import '../../node_modules/skeleton-css/css/normalize.css'
+@import '../../node_modules/skeleton-css/css/skeleton.css'
 @import 'variables'
 @import 'mixins'
 
