--- a/src/templates/section.html
+++ b/src/templates/section.html
@@ -5,9 +5,14 @@
   <link rel="stylesheet" href="../../../css/main.css">
 </head>
 <body>
-  <div class="header">
-    Header
+  <div class="container">
+
+    <section class="header">HEADER</section>
+
+    <section class="content">
+      {{{contents}}}
+    </section>
+
   </div>
-  {{{contents}}}
 </body>
 </html>
