--- a/src/stylus/objects.styl
+++ b/src/stylus/objects.styl
@@ -1,10 +1,10 @@
 
 // Header
-.header
-  position relative
-  display flex
-  align-items center
-  justify-content center
-  text-align center
-
-  debug()
+// .header
+//   position relative
+//   display flex
+//   align-items center
+//   justify-content center
+//   text-align center
+//
+//   debug()
