Copy css and fix template paths.

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,10 +1,10 @@
 // Main Styles
 // -----------
 
-@import '../../node_modules/skeleton-css/css/normalize.css'
-@import '../../node_modules/skeleton-css/css/skeleton.css'
-@import 'variables'
-@import 'mixins'
+// @require '../../node_modules/skeleton-css/css/normalize.css'
+// @require '../../node_modules/skeleton-css/css/skeleton.css'
+@require 'variables'
+@require 'mixins'
 
-@import 'elements'
-@import 'objects'
+@require 'elements'
+@require 'objects'
