--- a/src/templates/section.html
+++ b/src/templates/section.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <title>{{title}}</title>
-  <link rel="stylesheet" href="../../../css/main.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/skeleton.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
   <div class="container">
-
-    <section class="header">HEADER</section>
 
     <section class="content">
       {{{contents}}}
