--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title>{{title}}</title>
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/skeleton.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
   <div class="container">
