Minor style updates

--- a/src/stylus/variables.styl
+++ b/src/stylus/variables.styl
@@ -1,5 +1,15 @@
+// Variables
+// =========
 
-// Colors (dark to light)
+
+// Base
+// ----
+
+base_font_size = 12px
+
+
+// Colors
+// ------
 
 // Grayscale
 color_gray_0 = #000
@@ -10,3 +20,39 @@ color_gray_4 = lighten(color_gray_0, 80%)
 color_gray_5 = lighten(color_gray_0, 100%)
 color_black  = color_gray_0
 color_white  = color_gray_5
+
+
+// Font Stacks
+// -----------
+
+font_primary = 'Helvetica Neue', helvetica
+
+
+// Font Sizes & Line Heights
+// -------------------------
+
+// Line Height
+line_height_1 = 1.0
+line_height_2 = 1.5
+line_height_3 = 2.0
+
+// Font Sizes
+font_size_1 = 1.0rem
+font_size_2 = 1.2rem
+font_size_3 = 1.4rem
+font_size_4 = 1.6rem
+font_size_5 = 1.8rem
+font_size_6 = 2.8rem
+font_size_7 = 3.6rem
+
+
+// Spacing
+// -------
+
+
+// Layout Columns
+// --------------
+
+
+// Breakpoints
+// -----------
