--- a/src/stylus/elements.styl
+++ b/src/stylus/elements.styl
@@ -1,8 +1,37 @@
 // Elements
 // --------
 
+// Root
+// ----
+html
+  font-size base_font_size
+
 body
   display flex
   flex-direction column
-
   text-rendering optimizeLegibility
+
+  font-family font_primary
+
+// Headings
+// -------
+h1
+h2
+h3
+  margin-top 1rem
+  margin-bottom 2rem
+  letter-spacing normal
+  font-family font_primary
+  font-weight normal
+
+h1
+  font-size 3.0rem
+
+h2
+  font-size 1.5rem
+
+h3
+  font-size 1.0rem
+
+p
+  margin-bottom 1.0rem
