--- a/src/templates/section.html
+++ b/src/templates/section.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/skeleton.css">
   <link rel="stylesheet" href="/css/main.css">
+  <script src="/js/d3.js"></script>
 </head>
 <body>
 <div class="container">
